<resources>
    <string name="app_name">Cloud Password Manager</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_logo_description">Logo</string>

    <string name="logout_nav_label">Logout</string>
    <string name="logout_menu_label">Logout</string>
    <string name="login_nav_label">Login</string>

    <string name="storage_type_owncloud_passwords">OwnCloud Passwords</string>
    <string name="storage_type_secrets_manager_v1">Secrets Manager</string>
    <string name="storage_type_demo">Demo</string>

    <string name="info_download_pubkey_message">Downloading public key for %s</string>
    <string name="info_encrypt_message">Encrypting secret for %s</string>
    <string name="info_update_secret_message">Uploading secret for %s</string>
    <string name="error_user_has_not_key">User %s does not have a key</string>

    <string name="login_url_hint">https://mycloud.example.com/owncloud</string>
    <string name="login_user_hint">Username</string>
    <string name="login_pass_hint">Password</string>
    <string name="login_login_label">Login</string>
    <string name="login_biologin_text">Login with biometrics</string>
    <string name="login_pin_label">Pin SSL</string>
    <string name="login_unpin_label">Unpin SSL</string>
    <string name="login_import_key_label">Manage Key</string>
    <string name="login_error_description">Error message</string>
    <string name="login_progress_message">Logging In</string>
    <string name="login_pin_progress_message">Checking Encryption</string>

    <string name="error_invalid_username_password">Invalid username and password</string>
    <string name="error_unknown_error">An unknown error has occurred</string>
    <string name="error_empty_url">You must specify a URL</string>
    <string name="error_bad_url">You must specify a URL that starts with http:// or https://</string>
    <string name="password_list_title">Passwords</string>

    <string name="password_list_nav_label">Password List</string>
    <string name="password_list_progress_message">Loading</string>
    <string name="password_list_decryption_failed">Decryption Failed</string>

    <string name="example_website">www.github.com</string>
    <string name="example_website_empty">(No Website)</string>
    <string name="example_loginName">myusername</string>
    <string name="example_category">Banking</string>
    <string name="example_password_masked">********{16}</string>

    <string name="password_add_title">Add Password</string>
    <string name="password_add_website_hint">Website/App</string>
    <string name="password_add_username_hint">Username</string>
    <string name="password_add_password_hint">Password</string>
    <string name="password_add_error_description">Error message</string>
    <string name="password_add_add_label">Add Password</string>
    <string name="password_add_progress_message">Adding Password</string>

    <string name="password_detail_title">Password Details</string>
    <string name="password_detail_website_label">Website:</string>
    <string name="password_detail_loginName_label">Login Name:</string>
    <string name="password_detail_password_label">Password:</string>
    <string name="password_detail_password_masked">********{%1$d}</string>
    <string name="password_detail_password_action_copy">Copy</string>
    <string name="password_detail_password_action_show">Show</string>
    <string name="password_detail_password_action_hide">Hide</string>
    <string name="password_detail_password_contains_capital">A</string>
    <string name="password_detail_password_contains_lower">a</string>
    <string name="password_detail_password_contains_number">2</string>
    <string name="password_detail_password_contains_symbol">$</string>
    <string name="password_detail_category_label">Category:</string>
    <string name="password_detail_share_label">Users Shared With:</string>
    <string name="password_detail_share_value_none">None</string>
    <string name="password_detail_notes_label">Notes:</string>
    <string name="password_detail_share_dialog_title">Select Users</string>
    <string name="password_detail_share_dialog_share_button">Update Access</string>
    <string name="password_detail_share_dialog_cancel_button">Cancel</string>
    <string name="password_detail_progress_message">Updating Password</string>
    <string name="password_detail_info_download_message">Downloading Secret</string>
    <string name="password_detail_info_decrypt_message">Decrypting Secret</string>

    <string name="password_detail_website_toast">URL copied to clipboard</string>
    <string name="password_detail_loginName_toast">Login name copied to clipboard</string>
    <string name="password_detail_password_toast">Password copied to clipboard</string>

    <string name="import_key_clear">Delete Private Key</string>

    <string name="settings_title">Settings</string>
    <string name="settings_nav_label">Settings</string>
    <string name="settings_savepass_label">Password Policy:</string>
    <string name="settings_savepass_descr">Which scenarios will your password be saved and used?</string>

    <string name="settings_savepass_never_label">Never Store Your Password</string>
    <string name="settings_savepass_never_descr">Your password will never be saved to your device.
        You will need to enter your password every time you open the app.
    </string>
    <string name="settings_savepass_always_label">Encrypt and Store Your Password</string>
    <string name="settings_savepass_always_descr">Your password will be encrypted and saved on the device.
        When you open the app, the password field will be pre-populated.  Other apps on your device will
        not be able to able to get your password unless they have root access.  Your password will not be
        backed up to Google\'s servers.
    </string>
    <string name="settings_savepass_passwordprotected_label">Encrypt and Store Your Password When Phone is Password Protected</string>
    <string name="settings_savepass_passwordprotected_descr">Your password will be encrypted and saved on the device.
        When you open the app, the password field will be pre-populated.  Other apps on your device will
        not be able to able to get your password unless they have root access.  Your password will not be
        backed up to Google\'s servers.  Your device must be password protected to select this option.  Requires API 16.
    </string>
    <string name="settings_savepass_keystore_label">Encrypt and Store Your Password In the Android Keystore</string>
    <string name="settings_savepass_keystore_descr">Your password will be encrypted and saved on the device\'s keystore.
        When you open the app, the password field will be pre-populated.  Other apps on your device will
        not be able to able to get your password unless they have root access.  Your password will not be
        backed up to Google\'s servers.  Your device must be password protected to select this option.  If your device
        supports a secure encryption storage device, that device will be used to store the encryption key that
        your password was encrypted with
    </string>
    <string name="settings_offline_label">Offline Support:</string>
    <string name="settings_biometrics_label">Biometric/Fingerprint Support:</string>
    <string name="settings_biometrics_enroll_title">Enroll in Biometric Login</string>
    <string name="settings_biometrics_enroll_success">Successful Enrollment</string>
    <string name="settings_biometrics_enroll_cancel">Cancel</string>
    <string name="settings_biometrics_auth_title">Login using Biometrics</string>
    <string name="settings_biometrics_auth_success">Successful Authentication</string>
    <string name="settings_biometrics_auth_cancel">Cancel</string>

    <string name="about_nav_label">About</string>
    <string name="about_version_label">Version:</string>
    <string name="about_version_example">0.9</string>
    <string name="about_githash_label">Git Hash:</string>
    <string name="about_githash_example">4efe780</string>
    <string name="about_buildtime_label">Built:</string>
    <string name="about_buildtime_example">2016/01/01 00:00:00 EST</string>
    <string name="about_buildtype_label">Build Type:</string>
    <string name="about_buildtype_example">debug</string>
    <string name="about_ack">Icons provided by Google Material Design Site\n\nPasswords is developed by fcturner\n\nOwncloud is developed by Owncloud, Inc.</string>

</resources>
