<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.intirix.cloudpasswordmanager.pages.passworddetail.PasswordDetailActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <TextView
        android:id="@+id/password_detail_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_website"
        android:layout_below="@id/my_toolbar"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_alignParentLeft="true"/>

    <TextView
        style="@style/password_detail_label"
        android:id="@+id/password_detail_loginName_label"
        android:layout_below="@id/password_detail_website"
        android:text="@string/password_detail_loginName_label"/>

    <TextView
        style="@style/password_detail_value"
        android:id="@+id/password_detail_loginName_value"
        android:layout_alignBottom="@id/password_detail_loginName_label"
        android:layout_toRightOf="@id/password_detail_loginName_label"
        android:text="@string/example_loginName"/>

    <!-- Password value row -->
    <TextView
        style="@style/password_detail_label"
        android:id="@+id/password_detail_password_label"
        android:layout_below="@id/password_detail_loginName_label"
        android:text="@string/password_detail_password_label"/>

    <TextView
        style="@style/password_detail_value"
        android:id="@+id/password_detail_password_value"
        android:layout_alignBottom="@id/password_detail_password_label"
        android:layout_toRightOf="@id/password_detail_password_label"
        android:text="@string/example_password_masked"/>

    <!-- Password action button row -->
    <TextView
        style="@style/password_detail_action"
        android:id="@+id/password_detail_password_copy"
        android:layout_below="@id/password_detail_password_value"
        android:layout_alignLeft="@id/password_detail_password_value"
        android:layout_marginLeft="-10dp"
        android:text="@string/password_detail_password_action_copy"/>

    <TextView
        style="@style/password_detail_action"
        android:id="@+id/password_detail_password_show"
        android:layout_below="@id/password_detail_password_value"
        android:layout_toRightOf="@id/password_detail_password_copy"
        android:text="@string/password_detail_password_action_show"/>

    <TextView
        style="@style/password_detail_action"
        android:id="@+id/password_detail_password_hide"
        android:layout_below="@id/password_detail_password_value"
        android:layout_toRightOf="@id/password_detail_password_copy"
        android:text="@string/password_detail_password_action_hide"
        android:visibility="invisible"/>

    <!-- Password contains row -->
    <TextView
        style="@style/password_detail_contains"
        android:id="@+id/password_detail_contains_capital"
        android:layout_below="@id/password_detail_password_copy"
        android:layout_alignLeft="@id/password_detail_password_value"
        android:text="@string/password_detail_password_contains_capital"
        android:enabled="true"/>

    <TextView
        style="@style/password_detail_contains"
        android:id="@+id/password_detail_contains_lower"
        android:layout_below="@id/password_detail_password_copy"
        android:layout_toRightOf="@id/password_detail_contains_capital"
        android:text="@string/password_detail_password_contains_lower"
        android:enabled="false"/>

    <TextView
        style="@style/password_detail_contains"
        android:id="@+id/password_detail_contains_number"
        android:layout_below="@id/password_detail_password_copy"
        android:layout_toRightOf="@id/password_detail_contains_lower"
        android:text="@string/password_detail_password_contains_number"
        android:enabled="false"/>

    <TextView
        style="@style/password_detail_contains"
        android:id="@+id/password_detail_contains_symbol"
        android:layout_below="@id/password_detail_password_copy"
        android:layout_toRightOf="@id/password_detail_contains_number"
        android:text="@string/password_detail_password_contains_symbol"
        android:enabled="false"/>

    <!-- Category Row -->
    <TextView
        style="@style/password_detail_label"
        android:id="@+id/password_detail_category_label"
        android:layout_below="@id/password_detail_contains_capital"
        android:text="@string/password_detail_category_label"/>

    <TextView
        style="@style/category_textview"
        android:id="@+id/password_detail_category_value"
        android:layout_alignBottom="@id/password_detail_category_label"
        android:layout_toRightOf="@id/password_detail_category_label"
        android:layout_marginLeft="20sp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@color/colorPrimary"
        android:text="@string/example_category"/>

    <!-- Notes -->
    <TextView
        style="@style/password_detail_label"
        android:id="@+id/password_detail_notes_label"
        android:layout_below="@id/password_detail_category_label"
        android:text="@string/password_detail_notes_label"/>

    <TextView
        android:id="@+id/password_detail_notes_value"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
