<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.intirix.cloudpasswordmanager.LoginActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <EditText
            android:id="@+id/login_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_url_hint"/>

        <EditText
            android:id="@+id/login_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_url"
            android:hint="@string/login_user_hint"/>

        <EditText
            android:id="@+id/login_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_user"
            android:inputType="textPassword"
            android:hint="@string/login_pass_hint"/>

        <TextView
            android:id="@+id/login_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_pass"
            android:contentDescription="@string/login_error_description"/>

        <Button
            android:id="@+id/login_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_error_message"
            android:layout_alignParentRight="true"
            android:text="@string/login_login_label"/>

    </RelativeLayout>


</LinearLayout>
