<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".pages.settings.SettingsActivity">

    <TextView
        style="@style/settings_label"
        android:id="@+id/settings_savepass_label"
        android:layout_below="@id/my_toolbar"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@id/my_toolbar"
        android:text="@string/settings_savepass_label"/>

    <TextView
        style="@style/settings_value"
        android:id="@+id/settings_savepass_value"
        android:layout_toRightOf="@id/settings_savepass_label"
        android:layout_alignBottom="@id/settings_savepass_label"
        android:text="@string/settings_savepass_never_label"/>

    <TextView
        style="@style/settings_descr"
        android:id="@+id/settings_savepass_descr"
        android:layout_below="@id/settings_savepass_label"
        android:layout_alignLeft="@id/settings_savepass_label"
        android:text="@string/settings_savepass_descr"
        />

    <TextView
        style="@style/settings_value_descr"
        android:id="@+id/settings_savepass_value_descr"
        android:layout_below="@id/settings_savepass_descr"
        android:layout_alignLeft="@id/settings_savepass_label"
        android:text="@string/settings_savepass_never_descr"
        />

</RelativeLayout>